syntax = "proto3";

option go_package = "github.com/chrissnell/gopherwx/protobuf";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Weather {
    rpc GetLiveWeather (Empty) returns (stream WeatherReading) {}
    rpc GetWeatherSpan (WeatherSpanRequest) returns (WeatherSpan) {}
}

message WeatherSpanRequest {
    google.protobuf.Duration spanSize = 1;
    google.protobuf.Timestamp spanStart = 2;
}

message WeatherSpan {
    repeated WeatherReading reading = 1;
}

message WeatherReading {
    google.protobuf.Timestamp lastReading = 1;
    float outsideTemp = 2;
    int32 outsideHumidity = 3;
    float barometer = 4;
    int32 windSpeed = 5;
    int32 windDir = 6;
    float rainfallDay = 7;
    float windChill = 8;
    float heatIndex = 9;
    float insideTemp = 10;
    float insideHumidity = 11;
}

message Empty {}
